Ajout de la solution sur les functor units + début d'exemples et d'analyse de la solution

--- a/biblio.bib
+++ b/biblio.bib
@@ -11,7 +11,7 @@
   note={http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2012/n3337.pdf}
 }
 
-@inproceedings{DBLP:conf/popl/KilpatrickDJM14,
+@inproceedings{KilpatrickDJM14,
   author    = {Scott Kilpatrick and
                Derek Dreyer and
                Simon L. Peyton Jones and
@@ -42,9 +42,21 @@
  address = {New York, NY, USA},
 } 
 
-@article{Rossberg:2013:MUM:2450136.2450137,
+@article{Leroy00,
+  author    = {Xavier Leroy},
+  title     = {A modular module system},
+  journal   = {J. Funct. Program.},
+  volume    = {10},
+  number    = {3},
+  year      = {2000},
+  pages     = {269-303},
+  ee        = {http://journals.cambridge.org/action/displayAbstract?aid=54525},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@article{MixinRossberg,
  author = {Rossberg, Andreas and Dreyer, Derek},
- title = {Mixin\&Rsquo; Up the ML Module System},
+ title = {Mixin' Up the ML Module System},
  journal = {ACM Trans. Program. Lang. Syst.},
  issue_date = {April 2013},
  volume = {35},
@@ -167,8 +179,8 @@
     pages = {147--156}
 }
 
-@INPROCEEDINGS{Cardelli97programfragments,,
-    author = {Luca Cardelli and Luca Cardelli},
+@INPROCEEDINGS{Cardelli97programfragments,
+    author = {Luca Cardelli},
     title = {Program Fragments, Linking, and Modularization},
     booktitle = {In ACM Symp. on Principles of Programming Languages},
     year = {1997},
