--- a/biblio.bib
+++ b/biblio.bib
@@ -130,18 +130,17 @@
 } 
 
 @misc{ocaml-platform,
-  author={The OCaml community},
+  author={{The OCaml community}},
   title={On the need and design of OCaml namespaces},
   year={2013},
-  note={A long discussion on the ocaml-platform mailing-list},
-  url={http://lists.ocaml.org/pipermail/platform/2013-February/000050.html}
-}
+  note={http://lists.ocaml.org/pipermail/platform/2013-February/000050.html}
+} 
 
 @misc{ocaml-proposals,
-  author={OCaml core developpers},
+  author={{OCaml core developpers}},
   title={Namespaces: proposals},
   year={2012},
-  url={http://gallium.inria.fr/~scherer/viewgit/?a=tree&p=namespaces}
+  url={http://gallium.inria.fr/~scherer/viewgit/?a=tree\&p=namespaces}
 }
 
 @TechReport{	  it:2000-001,
@@ -200,3 +199,8 @@
   note={http://siek.blogspot.fr/2012/07/linking-isnt-substitution-separately.html}
 }
 
+@misc{remy-scherer-prop,
+  author={Gabriel Scherer and Didier Rémy},
+  title={Namespaces for OCaml: a proposal},
+  note={http://gallium.inria.fr/~scherer/namespaces/spec.pdf}
+}
