Ajouts de nouveaux commentaires dans le rapport

--- a/biblio.bib
+++ b/biblio.bib
@@ -140,7 +140,7 @@
   author={{OCaml core developpers}},
   title={Namespaces: proposals},
   year={2012},
-  url={http://gallium.inria.fr/~scherer/viewgit/?a=tree\&p=namespaces}
+  note={http://gallium.inria.fr/~scherer/viewgit/?a=tree\&p=namespaces}
 }
 
 @TechReport{	  it:2000-001,
